# quire-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.agent/rules/: writing_rust.md
.github/workflows/: ci.yml  release.yml
npm/: .gitignore  build-packages.mjs
npm/quire-cli/: README.md  package.json
plan/: plan.md
plan/tasks/: README.md
scripts/: check_bench_p95.py  check_thin_boundary.sh  set_version.sh
skills/explore-markdown/: SKILL.md
skills/explore-markdown/agents/: openai.yaml
skills/link-markdown/: SKILL.md
skills/link-markdown/agents/: openai.yaml
skills/validate-markdown/: SKILL.md
skills/validate-markdown/agents/: openai.yaml
skills/write-markdown/: SKILL.md
skills/write-markdown/agents/: openai.yaml
spec/: REVIEW.md  index.md  log.md  spec.md  tests.md
spec/assets/adr/: index.md  (+1 more)
spec/functional/: FR-001-render-subcommand.md  FR-002-parse-subcommand.md  FR-003-extract-subcommand.md  FR-004-validate-subcommand.md  FR-005-path-safety.md  FR-006-io-contract.md  FR-007-exit-codes.md  FR-008-json-output-encoding.md  FR-009-schema-subcommand.md  FR-010-required-section-validation.md  FR-011-lookup-subcommand.md  FR-012-edit-subcommand.md  FR-013-lint-subcommand.md  FR-014-validate-okf-bundle.md  FR-015-fix-subcommand.md  FR-016-update-subcommand.md  index.md
spec/non-functional/: NFR-001-render-latency-budget.md  NFR-002-static-binary.md  NFR-003-zero-unsafe.md  NFR-004-no-network.md  NFR-005-diagnostic-format.md  NFR-006-cli-stability.md  index.md
spec/stakeholder/: StR-001-static-binary-hot-path.md  StR-002-sub-50ms-budget.md  StR-003-sandbox-inheritance.md  StR-004-thin-boundary-over-quire-rs.md  index.md
spec/usecase/: US-001-agent-renders-fr.md  US-002-human-parses-existing-artifact.md  US-003-ci-validates-archetype-conformance.md  US-004-cross-reference-extraction.md  US-005-machine-addresses-section.md  index.md
src/: io.rs  lib.rs  main.rs  safety.rs
src/commands/: edit.rs  extract.rs  fix.rs  lint.rs  lookup.rs  mod.rs  parse.rs  render.rs  schema.rs  update.rs  validate.rs
src/self_update/: mod.rs
tests/: audit_ldd.rs  audit_no_network.rs  cli_edit.rs  cli_errors.rs  cli_extract.rs  cli_fix.rs  cli_help.rs  cli_io.rs  cli_lint.rs  cli_lookup.rs  cli_okf.rs  cli_parse.rs  cli_render.rs  cli_sandbox.rs  cli_schema.rs  cli_update.rs  cli_validate.rs  integration.rs
tests/common/: mod.rs
tests/snapshots/: help.txt
(+51 files in other folders)
