[package]
name = "quire-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Static binary CLI wrapping quire-rs (parse, extract, lookup, edit, validate, schema)."
authors = ["Agent IX <kreneskyp@gmail.com>"]
license = "MIT"
repository = "https://github.com/agent-ix/quire-cli"

[lib]
name = "quire_cli"
path = "src/lib.rs"

[[bin]]
name = "quire"
path = "src/main.rs"

[dependencies]
quire-rs = { git = "https://github.com/agent-ix/quire-rs", tag = "v0.4.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
