[package]
name = "quire-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Static binary CLI wrapping quire-rs (parse, extract, lookup, edit, validate, schema)."
authors = ["Agent IX <kreneskyp@gmail.com>"]
license = "MIT"
repository = "https://github.com/agent-ix/quire-cli"

[lib]
name = "quire_cli"
path = "src/lib.rs"

[[bin]]
name = "quire"
path = "src/main.rs"

[dependencies]
quire-rs = { git = "https://github.com/agent-ix/quire-rs", tag = "v0.5.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true          # drop symbols — smaller distributed binary
panic = "abort"       # no unwinder; a panic SIGABRTs → exit 134 (matches FR-007)
